--- a/view/templets/home/index/PROTY_jia_xq.html
+++ b/view/templets/home/index/PROTY_jia_xq.html
@@ -1,17 +1,8 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/PORTY_xing.css" rel="stylesheet" type="text/css">
-<link href="css/jia.css" rel="stylesheet" type="text/css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery.SuperSlide.2.1.1.js"></script>
-<script src="js/PROTRY_xing.js"></script>
+<{include file="common_head1.html"}>
+<link href="<{$templets}>/index/css/PORTY_xing.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/jia.css" rel="stylesheet" type="text/css">
+<script src="<{$templets}>/index/js/jquery.SuperSlide.2.1.1.js"></script>
+<script src="<{$templets}>/index/js/PROTRY_xing.js"></script>
 <script type="text/javascript">
 		$(function(){ 
 			$(".top_nav").hover(function(){
@@ -24,82 +15,82 @@
 
 </head>
 
-<body style="background-image:url(images/xing_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
+<body style="background-image:url(<{$templets}>/index/images/xing_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
 <div class="top_nav" style="position:fixed;left:0;top:0;">
     <ul class="nav01" style="display:none;">
-            <li><a href="daoru01.html">俱乐部</a></li>
-            <li><a href="daoru02.html">星座珠宝</a></li>
-            <li><a href="daoru03.html">珠宝世界</a></li>
-            <li><a href="daoru04.html">高级定制系列</a></li>
-            <li><a href="daoru05.html">经典珠宝</a></li>
-            <li><a href="daoru06.html" class="curr_a1">PROTY之星</a></li>
-            <li><a href="daoru07.html">品牌故事</a></li>
-            <li><a href="daoru08.html">网络精品店</a></li>
+            <li><a href="/index.php/home/index/daoru01">俱乐部</a></li>
+            <li><a href="/index.php/home/index/daoru02">星座珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru03">珠宝世界</a></li>
+            <li><a href="/index.php/home/index/daoru04">高级定制系列</a></li>
+            <li><a href="/index.php/home/index/daoru05">经典珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru06" class="curr_a1">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/daoru07">品牌故事</a></li>
+            <li><a href="/index.php/home/index/daoru08">网络精品店</a></li>
     </ul>
     <ul class="nav02" style="width:320px;">
-            <li><a href="PROTY_xing.html">PROTY之星</a></li>
-            <li><a href="PROTY_shaitu.html" class="curr_a1">全部晒图</a></li>
-            <li><a href="PROTY_about.html">关于PTOTY之星</a></li>
+            <li><a href="/index.php/home/index/PROTY_xing">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/PROTY_shaitu" class="curr_a1">全部晒图</a></li>
+            <li><a href="/index.php/home/index/PROTY_about">关于PTOTY之星</a></li>
     </ul>
 </div>
-<div class="logo" style="position:static;margin-top:80px;"><a href="index.html"><img src="images/logo.png"></a></div>
-<div class="jia_bottom"><img src="images/hou.png"></div>
+<div class="logo" style="position:static;margin-top:80px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
+<div class="jia_bottom"><img src="<{$templets}>/index/images/hou.png"></div>
 <div class="pan">
 	<div class="pan_top">
     	<div class="pan_left">
-        	<div class="pan_img"><img src="images/x01.png" width="78" height="78"></div>
+        	<div class="pan_img"><img src="<{$templets}>/index/images/x01.png" width="78" height="78"></div>
             <div class="pan_text">潘多拉的present<br><span>人生就像一场旅行，不必在乎目的地，在乎的是沿途的风景和看风景的心情。</span></div>
         </div>
-        <div class="pan_right"><a href=""><img src="images/zhu.png" width="98" height="43"></a></div>
+        <div class="pan_right"><a href=""><img src="<{$templets}>/index/images/zhu.png" width="98" height="43"></a></div>
     </div>
-    <div class="jia_bottom"><img src="images/hou.png"></div>
+    <div class="jia_bottom"><img src="<{$templets}>/index/images/hou.png"></div>
     <div class="zuan">【PROTY海盗梦系列】钻石戒指彩色钻石之黄色钻石的形成----由于黄色与蓝色是互补色，因此当钻石的氮原子吸收了蓝光线后，便呈现出黄色色彩。气体浓度于钻石形成期间愈高，黄色色泽便愈饱和。而颜色愈浓烈的彩色钻石其价值亦愈高。</div>
-    <div class="jia_bottom"><img src="images/hou.png"></div>
+    <div class="jia_bottom"><img src="<{$templets}>/index/images/hou.png"></div>
     <div class="zhuan_content">
     	<div class="zhuan_left">
         	<ul class="zhuan_top">
-            	<li style="display:block;"><img src="images/datu01.png"></li>
-                <li><img src="images/datu02.png"></li>
-                <li><img src="images/datu03.png"></li>
-                <li><img src="images/datu04.png"></li>
-                <li><img src="images/datu01.png"></li>
-                <li><img src="images/datu02.png"></li>
+            	<li style="display:block;"><img src="<{$templets}>/index/images/datu01.png"></li>
+                <li><img src="<{$templets}>/index/images/datu02.png"></li>
+                <li><img src="<{$templets}>/index/images/datu03.png"></li>
+                <li><img src="<{$templets}>/index/images/datu04.png"></li>
+                <li><img src="<{$templets}>/index/images/datu01.png"></li>
+                <li><img src="<{$templets}>/index/images/datu02.png"></li>
             </ul>
             <ul class="zan">
             	<li><a href="">转发</a></li>
                 <li class="heng">评论</li>
-                <li><img src="images/zan.png" width="26" height="27"></li>
+                <li><img src="<{$templets}>/index/images/zan.png" width="26" height="27"></li>
             </ul>
             <div class="pl">
             	<textarea></textarea>
-                <div class="xiu"><img src="images/xia.png"></div>
+                <div class="xiu"><img src="<{$templets}>/index/images/xia.png"></div>
             </div>
             <div class="emo">
-                <div class="biaoqing"><img src="images/emotion.png" width="21" height="21"></div>
+                <div class="biaoqing"><img src="<{$templets}>/index/images/emotion.png" width="21" height="21"></div>
                 <div class="biaoqing_right"><label><input type="checkbox">同时转发到我的微博</label></div>
                 <div class="emo_right"><input type="submit" value="评论"></div>
             </div>
         </div>
         <div class="zhuan_right">
-        	<div class="topXING"><a href="PROTY_xing.html">返回PROTY之星</a></div>
+        	<div class="topXING"><a href="/index.php/home/index/PROTY_xing">返回PROTY之星</a></div>
             <div class="picMarquee-top">
-				<a class="next"><img src="images/yin01.png"></a>
+				<a class="next"><img src="<{$templets}>/index/images/yin01.png"></a>
                 <div class="bd">
                     <ul class="picList">
-                        <li><img src="images/datu01.png" / class="ccc"></li>
-                        <li><img src="images/datu02.png" /></li>
-                        <li><img src="images/datu03.png" /></li>
-                        <li><img src="images/datu04.png" /></li>
-                        <li><img src="images/datu01.png" /></li>
-                        <li><img src="images/datu02.png" /></li>
+                        <li><img src="<{$templets}>/index/images/datu01.png" / class="ccc"></li>
+                        <li><img src="<{$templets}>/index/images/datu02.png" /></li>
+                        <li><img src="<{$templets}>/index/images/datu03.png" /></li>
+                        <li><img src="<{$templets}>/index/images/datu04.png" /></li>
+                        <li><img src="<{$templets}>/index/images/datu01.png" /></li>
+                        <li><img src="<{$templets}>/index/images/datu02.png" /></li>
                     </ul>
                 </div>
-                <a class="prev"><img src="images/yin02.png"></a>
+                <a class="prev"><img src="<{$templets}>/index/images/yin02.png"></a>
 		</div>
 			<script type="text/javascript">
             jQuery(".picMarquee-top").slide({mainCell:".bd ul",autoPlay:false,effect:"top",vis:5,interTime:50});
             </script>
-            <div class="topXING"><a href="PROTY_shaitu.html">全部晒图</a></div>
+            <div class="topXING"><a href="/index.php/home/index/PROTY_shaitu">全部晒图</a></div>
         
         
         
