--- a/view/templets/home/index/dingzhi.html
+++ b/view/templets/home/index/dingzhi.html
@@ -1,18 +1,9 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/dingzhi.css" rel="stylesheet" type="text/css">
-<link href="css/Css.css" rel="stylesheet" type="text/css">
-<script src="js/jquery.js"></script>
-<script src="js/zhubao.js"></script>
-<script src="js/jquery.kkPages.js"></script>
-<script src="js/xingzuo.js"></script>
+<{include file="common_head1.html"}>
+<link href="<{$templets}>/index/css/dingzhi.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/Css.css" rel="stylesheet" type="text/css">
+<script src="<{$templets}>/index/js/zhubao.js"></script>
+<script src="<{$templets}>/index/js/jquery.kkPages.js"></script>
+<script src="<{$templets}>/index/js/xingzuo.js"></script>
 <script type="text/javascript">
 		$(function(){ 
 			$(".top_nav").hover(function(){
@@ -32,17 +23,17 @@ $(function(){
 </script>  
 </head>
 
-<body style="background-image:url(images/dingzhi_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
+<body style="background-image:url(<{$templets}>/index/images/dingzhi_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
 <div class="top_nav" style="position:fixed;left:0;top:0;">
     <ul class="nav01" style="display:none;">
-            <li><a href="daoru01.html">俱乐部</a></li>
-            <li><a href="daoru02.html">星座珠宝</a></li>
-            <li><a href="daoru03.html">珠宝世界</a></li>
-            <li><a href="daoru04.html" class="curr_a1">高级定制系列</a></li>
-            <li><a href="daoru05.html">经典珠宝</a></li>
-            <li><a href="daoru06.html">PROTY之星</a></li>
-            <li><a href="daoru07.html">品牌故事</a></li>
-            <li><a href="daoru08.html">网络精品店</a></li>
+            <li><a href="/index.php/home/index/daoru01">俱乐部</a></li>
+            <li><a href="/index.php/home/index/daoru02">星座珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru03">珠宝世界</a></li>
+            <li><a href="/index.php/home/index/daoru04" class="curr_a1">高级定制系列</a></li>
+            <li><a href="/index.php/home/index/daoru05">经典珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru06">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/daoru07">品牌故事</a></li>
+            <li><a href="/index.php/home/index/daoru08">网络精品店</a></li>
     </ul>
     <ul class="nav02" style="width:1200px;">
             <li><a href="">PROTY海盗梦系列</a></li>
@@ -55,15 +46,15 @@ $(function(){
             <li><a href="">PROTY美人鱼系列</a></li>
     </ul>
 </div>
-<div class="logo" style="position:static;margin-top:80px;"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="logo" style="position:static;margin-top:80px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
 <div class="hua">
 	<div class="hua_left">
-    	<div class="hua01"><img src="images/hua01.png" width="476" height="160"></div>
-        <div class="hua_liulan"><a href="dingzhi_fenlei.html">浏览PROTY帝王花系列</a></div>
+    	<div class="hua01"><img src="<{$templets}>/index/images/hua01.png" width="476" height="160"></div>
+        <div class="hua_liulan"><a href="/index.php/home/index/dingzhi_fenlei">浏览PROTY帝王花系列</a></div>
     </div>
-    <div class="hua_right"><img src="images/ccc.png" width="611" height="784"></div>
+    <div class="hua_right"><img src="<{$templets}>/index/images/ccc.png" width="611" height="784"></div>
 </div>
-<div class="hua02"><img src="images/hua02.png"></div>
+<div class="hua02"><img src="<{$templets}>/index/images/hua02.png"></div>
 <div class="meigui">
 	<div class="meigui_left"><a href="">返回</a></div>
     <div class="meigui_center">灵感源泉<br><span>玫瑰</span></div>
@@ -73,16 +64,16 @@ $(function(){
 </script>  
     </div>
 </div>
-<div class="peitu"><img src="images/meigui.png"></div>
+<div class="peitu"><img src="<{$templets}>/index/images/meigui.png"></div>
 <div class="peitu_jieshao">PROTY帝王花系列高级珠宝-戒指，2015年</div>
 <div class="peizi">
 	<p class="miaoshu01">“<span>要</span>得到运气，你必须相信运气。"PROTY喜欢这样说。</p>
     <p class="miaoshu01"> PROTY普罗蒂的运气是一个机会、一个没有被错过的时机、一个由世界及自然给予的契机。带着正面及具诗意的想象，品牌作品在近百年来一直向运气致敬。瓢虫、四叶草、仙子及独角兽存在于其高尚雅致的世界，带来诗意盎然、和谐协调的幻想。在周游世界各个角落寻找宝石、满足对这些远境的好奇之旅中，品牌以其作品重新演绎运气的象征。</p>
     <p class="miaoshu01"> PROTY普罗蒂的运气是一个机会、一个没有被错过的时机、一个由世界及自然给予的契机。带着正面及具诗意的想象，品牌作品在近百年来一直向运气致敬。瓢虫、四叶草、仙子及独角兽存在于其高尚雅致的世界，带来诗意盎然、和谐协调的幻想。在周游世界各个角落寻找宝石、满足对这些远境的好奇之旅中，品牌以其作品重新演绎运气的象征。</p>
     <p class="miaoshu01">这点运气是要经过一番努力才能得到的，那罕有的四叶草是特别留意运气象征的他或她，成功找到后所得的奖品。对品牌来说，运气并不是坐着得来的，就如勒内‧夏尔（René Char）所说："善用你的运气，抓紧你的好运，然后踏上前去面对危险。看过你这样做后，他们自会习惯。"</p>
-    <div class="xingqu"><a href="dingzhi_fenlei.html">若您对此主题感兴趣，您可能也会喜欢：PROTY大洋之花系列</a></div>
+    <div class="xingqu"><a href="/index.php/home/index/dingzhi_fenlei">若您对此主题感兴趣，您可能也会喜欢：PROTY大洋之花系列</a></div>
 </div>
-<div class="hua02"><img src="images/hua02.png"></div>
+<div class="hua02"><img src="<{$templets}>/index/images/hua02.png"></div>
 <div class="zaifan"><a href="">返回</a></div>
 
 
