--- a/view/templets/home/index/gr_contact.html
+++ b/view/templets/home/index/gr_contact.html
@@ -6,10 +6,10 @@
 <meta name="keywords" content="HTML,CSS,JavaScript">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/gr.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/gr.js"></script>
+<link href="<{$templets}>/index/css/base.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/gr.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="<{$templets}>/index/js/jquery.js"></script>
+<script type="text/javascript" src="<{$templets}>/index/js/gr.js"></script>
 <script>
 $(function(){
 	$(".yi01").hover(function(){
@@ -32,86 +32,86 @@ $(function(){
 </script>
 </head>
 
-<body style="background-image:url(images/gr_back.png);">
+<body style="background-image:url(<{$templets}>/index/images/gr_back.png);">
 <div class="header" style="position:static;">
 	<div class="header_content">
-    	<div class="login"><a href="gr_tiaokuan.html">注册</a><a href="gr_denglu.html">登录</a></div>
+    	<div class="login"><a href="/index.php/home/index/gr_tiaokuan">注册</a><a href="/index.php/home/index/gr_denglu">登录</a></div>
         <div class="login_text">立即注册成为会员</div>
     </div>
 </div>
-<div class="logo" style="position:static;margin-top:38px;"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="logo" style="position:static;margin-top:38px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
 <div class="nav_box" style="position:static;margin-top:18px;">
     <ul class="nav">
         <li class="yiyiyi">
-            <a href="daoru01.html" class="yi01">俱乐部</a>
+            <a href="/index.php/home/index/daoru01" class="yi01">俱乐部</a>
             <ul class="erjinav">
-                <li><a href="julebu.html">服务方式</a></li>
-                <li><a href="julebu.html">服务内容</a></li>
-                <li><a href="julebu.html">会员优势</a></li>
+                <li><a href="/index.php/home/index/julebu">服务方式</a></li>
+                <li><a href="/index.php/home/index/julebu">服务内容</a></li>
+                <li><a href="/index.php/home/index/julebu">会员优势</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru02.html" class="yi01">星座珠宝</a>
+            <a href="/index.php/home/index/daoru02" class="yi01">星座珠宝</a>
             <ul class="erjinav">
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru03.html" class="yi01">珠宝世界</a>
+            <a href="/index.php/home/index/daoru03" class="yi01">珠宝世界</a>
             <ul class="erjinav">
-                    	<li><a href="zhubao.html">项链</a></li>
-                        <li><a href="zhubao.html">吊坠</a></li>
-                        <li><a href="zhubao.html">戒指</a></li>
-                        <li><a href="zhubao.html">耳环</a></li>
-                        <li><a href="zhubao.html">手链</a></li>
-                        <li><a href="zhubao.html">腕表</a></li>
-                        <li><a href="zhubao.html">对戒</a></li>
-                        <li><a href="zhubao.html">男士珠宝</a></li>
-                    </ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru04.html" class="yi01">高级定制系列</a>
-            <ul class="erjinav">
-                    <li><a href="dingzhi_liulan.html">PROTY海盗梦系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY帝王花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY风暴系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大洋之花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY八爪鱼系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大卫之印系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY海盗皇后系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY美人鱼系列</a></li>
+                <li><a href="/index.php/home/index/zhubao">项链</a></li>
+                <li><a href="/index.php/home/index/zhubao">吊坠</a></li>
+                <li><a href="/index.php/home/index/zhubao">戒指</a></li>
+                <li><a href="/index.php/home/index/zhubao">耳环</a></li>
+                <li><a href="/index.php/home/index/zhubao">手链</a></li>
+                <li><a href="/index.php/home/index/zhubao">腕表</a></li>
+                <li><a href="/index.php/home/index/zhubao">对戒</a></li>
+                <li><a href="/index.php/home/index/zhubao">男士珠宝</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru05.html" class="yi01">经典珠宝</a>
+            <a href="/index.php/home/index/daoru04" class="yi01">高级定制系列</a>
             <ul class="erjinav">
-                <li><a href="jingdian_liulan.html">PROTY帝王花系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗梦系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗爵士系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海洋之心系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY王者之风系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗之旅系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY封印系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY黄钻系列</a></li>
-    		</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru06.html" class="yi01">PROTY之星</a>
-            <ul class="erjinav">
-                <li><a href="PROTY_xing.html">PROTY之星</a></li>
-                <li><a href="PROTY_shaitu.html">全部晒图</a></li>
-                <li><a href="PROTY_about.html">关于PTOTY之星</a></li>
-        	</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru07.html" class="yi01">品牌故事</a>
-            <ul class="erjinav">
-                    <li><a href="pinpai.html">品牌故事</a></li>
-                    <li><a href="pinpai.html">产品故事</a></li>
-                    <li><a href="pinpai.html">海上帝王花</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY海盗梦系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY帝王花系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY风暴系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY大洋之花系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY八爪鱼系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY大卫之印系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY海盗皇后系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY美人鱼系列</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru08.html" class="yi01">网络精品店</a>
+            <a href="/index.php/home/index/daoru05" class="yi01">经典珠宝</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY帝王花系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗梦系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗爵士系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海洋之心系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY王者之风系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗之旅系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY封印系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY黄钻系列</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru06" class="yi01">PROTY之星</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/PROTY_xing">PROTY之星</a></li>
+                <li><a href="/index.php/home/index/PROTY_shaitu">全部晒图</a></li>
+                <li><a href="/index.php/home/index/PROTY_about">关于PTOTY之星</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru07" class="yi01">品牌故事</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/pinpai">品牌故事</a></li>
+                <li><a href="/index.php/home/index/pinpai">产品故事</a></li>
+                <li><a href="/index.php/home/index/pinpai">海上帝王花</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="/index.php/home/index/daoru08" class="yi01">网络精品店</a>
             <ul class="erjinav">
             </ul>
         </li>
@@ -119,8 +119,8 @@ $(function(){
     <div style="clear:both;"></div>
 </div>
 <div class="about">
-	<div class="about_top"><img src="images/dd01.png"></div>
-    <div class="gy01"><img src="images/lianxi.png" width="105" height="24"></div>
+	<div class="about_top"><img src="<{$templets}>/index/images/dd01.png"></div>
+    <div class="gy01"><img src="<{$templets}>/index/images/lianxi.png" width="105" height="24"></div>
     <ul class="fuwu" style="overflow:hidden;">
     	<li class="jtda">
         重庆市长宁区淮海西路570号红坊创意园区G-108 栋(近虹桥路)<br>
