--- a/view/templets/home/index/pinpai.html
+++ b/view/templets/home/index/pinpai.html
@@ -1,15 +1,5 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/julebu.css" rel="stylesheet" type="text/css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery.SuperSlide.2.1.1.js"></script>
+<{include file="common_head1.html"}>
+<script src="<{$templets}>/index/js/jquery.SuperSlide.2.1.1.js"></script>
 <script>
 $(function(){
 	$(".top_nav").hover(function(){
@@ -26,39 +16,39 @@ body{overflow:hidden;}
 </head>
 
 <body>
-<div class="logo" style="top:80px;"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="logo" style="top:80px;"><a href="index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
 <div class="bannerBox">
       <div class="kkk">
             <div class="imgBox">
-                 <div class="jule_tu" style="background-image:url(images/gushi01.png);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/gushi01.png);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/pin01.png" width="368" height="257"></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/pin01.png" width="368" height="257"></div>
         				<div style="padding-bottom:243px;"></div>
                     </div>
                  </div>
-                 <div class="jule_tu" style="background-image:url(images/gushi02.png);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/gushi02.png);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/pin02.png" width="373" height="257"></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/pin02.png" width="373" height="257"></div>
         				<div style="padding-bottom:243px;"></div>
                     </div>
                  </div>
-                 <div class="jule_tu" style="background-image:url(images/gushi03.png);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/gushi03.png);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/pin03.png" width="445" height="218"></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/pin03.png" width="445" height="218"></div>
         				<div style="padding-bottom:243px;"></div>
                     </div>
                  </div>
             </div>
             <div class="top_nav">
                 <ul class="nav01">
-                    <li><a href="daoru01.html">俱乐部</a></li>
-                    <li><a href="daoru02.html">星座珠宝</a></li>
-                    <li><a href="daoru03.html">珠宝世界</a></li>
-                    <li><a href="daoru04.html">高级定制系列</a></li>
-                    <li><a href="daoru05.html">经典珠宝</a></li>
-                    <li><a href="daoru06.html">PROTY之星</a></li>
-                    <li><a href="daoru07.html" class="curr_a1">品牌故事</a></li>
-                    <li><a href="daoru08.html">网络精品店</a></li>
+                    <li><a href="/index.php/home/index/daoru01">俱乐部</a></li>
+                    <li><a href="/index.php/home/index/daoru02">星座珠宝</a></li>
+                    <li><a href="/index.php/home/index/daoru03">珠宝世界</a></li>
+                    <li><a href="/index.php/home/index/daoru04">高级定制系列</a></li>
+                    <li><a href="/index.php/home/index/daoru05">经典珠宝</a></li>
+                    <li><a href="/index.php/home/index/daoru06">PROTY之星</a></li>
+                    <li><a href="/index.php/home/index/daoru07" class="curr_a1">品牌故事</a></li>
+                    <li><a href="/index.php/home/index/daoru08">网络精品店</a></li>
                 </ul>
                 <ul class="ding01">
                     <li>品牌故事</li>
