--- a/view/templets/home/index/zhubao.html
+++ b/view/templets/home/index/zhubao.html
@@ -1,18 +1,8 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/julebu.css" rel="stylesheet" type="text/css">
-<link href="css/zhubao.css" rel="stylesheet" type="text/css">
-<link href="css/Css.css" rel="stylesheet" type="text/css">
-<script src="js/jquery.js"></script>
-<script src="js/zhubao.js"></script>
-<script src="js/jquery.kkPages.js"></script>
+<{include file="common_head1.html"}>
+<link href="<{$templets}>/index/css/zhubao.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/Css.css" rel="stylesheet" type="text/css">
+<script src="<{$templets}>/index/js/zhubao.js"></script>
+<script src="<{$templets}>/index/js/jquery.kkPages.js"></script>
 <!--<script>
 $(function(){
 		$('.pro').kkPages({
@@ -23,29 +13,29 @@ $(function(){
 </script>  -->
 </head>
 
-<body style="background-image:url(images/zhubao_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
+<body style="background-image:url(<{$templets}>/index/images/zhubao_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
 <div class="top_nav" style="position:fixed;left:0;top:0;">
     <ul class="nav01">
-            <li><a href="daoru01.html">俱乐部</a></li>
-            <li><a href="daoru02.html" class="curr_a1">星座珠宝</a></li>
-            <li><a href="daoru03.html">珠宝世界</a></li>
-            <li><a href="daoru04.html">高级定制系列</a></li>
-            <li><a href="daoru05.html">经典珠宝</a></li>
-            <li><a href="daoru06.html">PROTY之星</a></li>
-            <li><a href="daoru07.html">品牌故事</a></li>
-            <li><a href="daoru08.html">网络精品店</a></li>
+            <li><a href="/index.php/home/index/daoru01">俱乐部</a></li>
+            <li><a href="/index.php/home/index/daoru02" class="curr_a1">星座珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru03">珠宝世界</a></li>
+            <li><a href="/index.php/home/index/daoru04">高级定制系列</a></li>
+            <li><a href="/index.php/home/index/daoru05">经典珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru06">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/daoru07">品牌故事</a></li>
+            <li><a href="/index.php/home/index/daoru08">网络精品店</a></li>
     </ul>
 </div>
-<div class="logo" style="position:static;margin-top:80px;"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="logo" style="position:static;margin-top:80px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
 <div class="zhubao_content">
     <div class="dan">
-        <div class="sou"><img src="images/sou.png" width="220px" height="43px"></div>
+        <div class="sou"><img src="<{$templets}>/index/images/sou.png" width="220px" height="43px"></div>
         <div class="jieguo">17 个作品符合搜寻条件</div>
         <div class="shaixuan">
         	<div class="shaixuan_left">筛选器建立于</div>
             <div class="shaixuan_right">
             	<div class="e_shuru"><input type="text" placeholder="搜索"></div>
-                <div class="big"><a href=""><img src="images/big.png"></a></div>
+                <div class="big"><a href=""><img src="<{$templets}>/index/images/big.png"></a></div>
             </div>
             <div class="shaixuan_remen">热门搜索：<a href="">项链</a><a href="">黄金</a><a href="">钻石戒指</a><a href="">对戒定制</a></div>
         </div>
@@ -136,30 +126,30 @@ $(function(){
                 <div class="a_top_right">每页显示：<a href="">12</a><a href="" class="cur_yy">24</a></div>
             </div>
         	<ul class="pro">
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de01.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de02.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de03.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de04.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de05.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de06.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de07.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de08.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de09.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de010.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de011.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de012.png"></a></li>
-                <!--<li class="pro01"><a href="zhubao_xq.html"><img src="images/de01.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de02.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de03.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de04.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de05.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de06.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de07.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de08.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de09.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de010.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de011.png"></a></li>
-                <li class="pro01"><a href="zhubao_xq.html"><img src="images/de012.png"></a></li>-->
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de01.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de02.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de03.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de04.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de05.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de06.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de07.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de08.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de09.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de010.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de011.png"></a></li>
+                <li class="pro01"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/de012.png"></a></li>
+                <!--<li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de01.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de02.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de03.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de04.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de05.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de06.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de07.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de08.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de09.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de010.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de011.png"></a></li>
+                <li class="pro01"><a href="zhubao_xq.html"><img src="<{$templets}>/index/images/de012.png"></a></li>-->
             </ul>
         </div>
     </div>
