--- a/view/templets/home/index/PROTY_about.html
+++ b/view/templets/home/index/PROTY_about.html
@@ -1,15 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/PORTY_xing.css" rel="stylesheet" type="text/css">
-<script src="js/jquery.js"></script>
-<script src="js/PROTRY_xing.js"></script>
+<{include file="common_head1.html"}>
+<link href="<{$templets}>/index/css/PORTY_xing.css" rel="stylesheet" type="text/css">
+<script src="<{$templets}>/index/js/PROTRY_xing.js"></script>
 <script type="text/javascript">
 		$(function(){ 
 			$(".top_nav").hover(function(){
@@ -22,25 +13,25 @@
 
 </head>
 
-<body style="background-image:url(images/xing_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
+<body style="background-image:url(<{$templets}>/index/images/xing_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
 <div class="top_nav" style="position:fixed;left:0;top:0;">
     <ul class="nav01" style="display:none;">
-            <li><a href="daoru01.html">俱乐部</a></li>
-            <li><a href="daoru02.html">星座珠宝</a></li>
-            <li><a href="daoru03.html">珠宝世界</a></li>
-            <li><a href="daoru04.html">高级定制系列</a></li>
-            <li><a href="daoru05.html">经典珠宝</a></li>
-            <li><a href="daoru06.html" class="curr_a1">PROTY之星</a></li>
-            <li><a href="daoru07.html">品牌故事</a></li>
-            <li><a href="daoru08.html">网络精品店</a></li>
+            <li><a href="/index.php/home/index/daoru01">俱乐部</a></li>
+            <li><a href="/index.php/home/index/daoru02">星座珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru03">珠宝世界</a></li>
+            <li><a href="/index.php/home/index/daoru04">高级定制系列</a></li>
+            <li><a href="/index.php/home/index/daoru05">经典珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru06" class="curr_a1">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/daoru07">品牌故事</a></li>
+            <li><a href="/index.php/home/index/daoru08">网络精品店</a></li>
     </ul>
     <ul class="nav02" style="width:320px;">
-            <li><a href="PROTY_xing.html">PROTY之星</a></li>
-            <li><a href="PROTY_shaitu.html">全部晒图</a></li>
-            <li><a href="PROTY_about.html" class="curr_a1">关于PTOTY之星</a></li>
+            <li><a href="/index.php/home/index/PROTY_xing">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/PROTY_shaitu">全部晒图</a></li>
+            <li><a href="/index.php/home/index/PROTY_about" class="curr_a1">关于PTOTY之星</a></li>
     </ul>
 </div>
-<div class="logo" style="position:static;margin-top:80px;"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="logo" style="position:static;margin-top:80px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
 <div class="guanyu_top">
 	<ul class="wenti">
     	<li class="dq">关于PROTY之星</li>
