--- a/view/templets/home/index/PROTY_jia.html
+++ b/view/templets/home/index/PROTY_jia.html
@@ -1,20 +1,11 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/PORTY_xing.css" rel="stylesheet" type="text/css">
-<link href="css/jia.css" rel="stylesheet" type="text/css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery.SuperSlide.2.1.1.js"></script>
-<script src="js/PROTRY_xing.js"></script>
-<script src="js/jquery.kkPages.js"></script>
-<script src="js/jquery-1.8.3.min.js"></script> 
-<script src="js/jquery.grid-a-licious.min.js"></script> 
+<{include file="common_head1.html"}>
+<link href="<{$templets}>/index/css/PORTY_xing.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/jia.css" rel="stylesheet" type="text/css">
+<script src="<{$templets}>/index/js/jquery.SuperSlide.2.1.1.js"></script>
+<script src="<{$templets}>/index/js/PROTRY_xing.js"></script>
+<script src="<{$templets}>/index/js/jquery.kkPages.js"></script>
+<script src="<{$templets}>/index/js/jquery-1.8.3.min.js"></script> 
+<script src="<{$templets}>/index/js/jquery.grid-a-licious.min.js"></script> 
 <script type="text/javascript">
 			
 			//滚动条事件
@@ -52,30 +43,30 @@
 
 </head>
 
-<body style="background-image:url(images/xing_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
+<body style="background-image:url(<{$templets}>/index/images/xing_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
 <div class="top_nav" style="position:fixed;left:0;top:0;">
     <ul class="nav01" style="display:none;">
-            <li><a href="daoru01.html">俱乐部</a></li>
-            <li><a href="daoru02.html">星座珠宝</a></li>
-            <li><a href="daoru03.html">珠宝世界</a></li>
-            <li><a href="daoru04.html">高级定制系列</a></li>
-            <li><a href="daoru05.html">经典珠宝</a></li>
-            <li><a href="daoru06.html" class="curr_a1">PROTY之星</a></li>
-            <li><a href="daoru07.html">品牌故事</a></li>
-            <li><a href="daoru08.html">网络精品店</a></li>
+            <li><a href="/index.php/home/index/daoru01">俱乐部</a></li>
+            <li><a href="/index.php/home/index/daoru02">星座珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru03">珠宝世界</a></li>
+            <li><a href="/index.php/home/index/daoru04">高级定制系列</a></li>
+            <li><a href="/index.php/home/index/daoru05">经典珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru06" class="curr_a1">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/daoru07">品牌故事</a></li>
+            <li><a href="/index.php/home/index/daoru08">网络精品店</a></li>
     </ul>
     <ul class="nav02" style="width:320px;">
-            <li><a href="PROTY_xing.html">PROTY之星</a></li>
-            <li><a href="PROTY_shaitu.html" class="curr_a1">全部晒图</a></li>
-            <li><a href="PROTY_about.html">关于PTOTY之星</a></li>
+            <li><a href="/index.php/home/index/PROTY_xing">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/PROTY_shaitu" class="curr_a1">全部晒图</a></li>
+            <li><a href="/index.php/home/index/PROTY_about">关于PTOTY之星</a></li>
     </ul>
 </div>
-<div class="logo" style="position:static;margin-top:80px;"><a href="index.html"><img src="images/logo.png"></a></div>
-<div class="jia_bottom"><img src="images/hou.png"></div>
+<div class="logo" style="position:static;margin-top:80px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
+<div class="jia_bottom"><img src="<{$templets}>/index/images/hou.png"></div>
 <div class="shaitu_content">
 	<div class="s_left">
     	<div class="pu01">
-        	<div class="pu_img"><img src="images/pu01.png"></div>
+        	<div class="pu_img"><img src="<{$templets}>/index/images/pu01.png"></div>
             <ul class="a_guanzhu">
             	<li>
                     <div class="aq01"><a href="#">关注</a></div>
@@ -86,7 +77,7 @@
                     <div class="aq02">306</div>
                 </li>
                 <li>
-                    <div class="aq01"><a href="#"><img src="images/hogn.png" width="18" height="17"></a></div>
+                    <div class="aq01"><a href="#"><img src="<{$templets}>/index/images/hogn.png" width="18" height="17"></a></div>
                     <div class="aq02">30677</div>
                 </li>
             </ul>
@@ -94,44 +85,44 @@
             <div class="lapiao">
             	<div class="lapiao_left">转发帮她拉票：</div>
                 <div class="lapiao_right">
-                	<a href=""><img src="images/la01.png" width="29" height="23"></a>
-                    <a href=""><img src="images/la02.png" width="27" height="22"></a>
-                    <a href=""><img src="images/la03.png" width="23" height="25"></a>
+                	<a href=""><img src="<{$templets}>/index/images/la01.png" width="29" height="23"></a>
+                    <a href=""><img src="<{$templets}>/index/images/la02.png" width="27" height="22"></a>
+                    <a href=""><img src="<{$templets}>/index/images/la03.png" width="23" height="25"></a>
                 </div>
             </div>
         </div>
         <div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
         <div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
     </div>
     <div class="s_right">
     	<div class="s_right_top">
-        	<div class="s_left01"><img src="images/xiaomei.png" width="78px" height="23px"></div>
+        	<div class="s_left01"><img src="<{$templets}>/index/images/xiaomei.png" width="78px" height="23px"></div>
             <div class="s_right01"><a href=""><span>1</span>个专辑</a><a href=""><span>269</span>个分享</a><a href=""><span>568</span>个喜欢</a></div>
         </div>
         <div class="content">
@@ -145,15 +136,15 @@
                     <div class="luozhuang_right">(26)</div>
                 </div>
                 <ul class="luo">
-                	<li><img src="images/luo01.png"></li>
-                    <li><img src="images/luo01.png"></li>
-                    <li><img src="images/luo01.png"></li>
-                    <li><img src="images/luo01.png"></li>
-                    <li><img src="images/luo01.png"></li>
-                    <li><img src="images/luo01.png"></li>
-                    <li><img src="images/luo01.png"></li>
-                    <li><img src="images/luo01.png"></li>
-                    <li><img src="images/luo01.png"></li>
+                	<li><img src="<{$templets}>/index/images/luo01.png"></li>
+                    <li><img src="<{$templets}>/index/images/luo01.png"></li>
+                    <li><img src="<{$templets}>/index/images/luo01.png"></li>
+                    <li><img src="<{$templets}>/index/images/luo01.png"></li>
+                    <li><img src="<{$templets}>/index/images/luo01.png"></li>
+                    <li><img src="<{$templets}>/index/images/luo01.png"></li>
+                    <li><img src="<{$templets}>/index/images/luo01.png"></li>
+                    <li><img src="<{$templets}>/index/images/luo01.png"></li>
+                    <li><img src="<{$templets}>/index/images/luo01.png"></li>
                 </ul>
             </div>
         </div>
@@ -161,15 +152,15 @@
       <div class="item">
       	<div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
@@ -177,15 +168,15 @@
       <div class="item">
       	<div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
@@ -193,15 +184,15 @@
       <div class="item">
       	<div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
@@ -209,15 +200,15 @@
       <div class="item">
       	<div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
@@ -225,15 +216,15 @@
       <div class="item">
       	<div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
@@ -241,15 +232,15 @@
       <div class="item">
       	<div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
@@ -257,15 +248,15 @@
       <div class="item">
       	<div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
@@ -273,15 +264,15 @@
       <div class="item">
       	<div class="tuji">
         	<div class="tu_img">
-            	<img src="images/pu02.png" width="190" height="249">
+            	<img src="<{$templets}>/index/images/pu02.png" width="190" height="249">
                 <ul class="xihuan">
-                	<li><a href="PROTY_jia_xq.html">转发</a></li>
-                    <li><a href="PROTY_jia_xq.html" style="background-image:url(images/ping02.png);">评论</a></li>
-                    <li><a href="" style="background-image:url(images/ping03.png);">喜欢</a></li>
+                	<li><a href="/index.php/home/index/PROTY_jia_xq">转发</a></li>
+                    <li><a href="/index.php/home/index/PROTY_jia_xq" style="background-image:url(<{$templets}>/index/images/ping02.png);">评论</a></li>
+                    <li><a href="" style="background-image:url(<{$templets}>/index/images/ping03.png);">喜欢</a></li>
                 </ul>
             </div>
             <div class="wuyue">
-            	<div class="wuyue_left"><img src="images/xa.png"></div>
+            	<div class="wuyue_left"><img src="<{$templets}>/index/images/xa.png"></div>
                 <div class="wuyue_right"> <a>小美</a>   分享到  <a> 5月寻找裸妆女神写真</a> </div>
             </div>
         </div>
