--- a/view/templets/home/index/common_foot.html
+++ b/view/templets/home/index/common_foot.html
@@ -1,14 +1,14 @@
 
 <!--footer-->
-div class="footer" style="position:static;">
+<div class="footer" style="position:static;">
 <ul class="footer_content">
     <li>&2015 Proty diamonds ltd</li>
-    <li><a href="gr_about.html">关于PROTY</a></li>
-    <li><a href="gr_zixun.html">最新资讯</a></li>
-    <li><a href="gr_dianpu.html">店铺地址</a></li>
-    <li><a href="gr_FLtiaokuan.html">法律条款</a></li>
-    <li><a href="gr_wenti.html">常见问题</a></li>
-    <li><a href="gr_contact.html">联系我们</a></li>
+    <li><a href="/index.php/home/index/gr_about">关于PROTY</a></li>
+    <li><a href="/index.php/home/index/gr_zixun">最新资讯</a></li>
+    <li><a href="/index.php/home/index/gr_dianpu">店铺地址</a></li>
+    <li><a href="/index.php/home/index/gr_FLtiaokuan">法律条款</a></li>
+    <li><a href="/index.php/home/index/gr_wenti">常见问题</a></li>
+    <li><a href="/index.php/home/index/gr_contact">联系我们</a></li>
 </ul>
 </div>
 </body>
