--- a/view/templets/home/index/common_head1.html
+++ b/view/templets/home/index/common_head1.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+    <meta charset="utf-8">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML,CSS,JavaScript">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>普罗蒂</title>
+    <link href="<{$templets}>/index/css/base.css" rel="stylesheet" type="text/css">
+    <link href="<{$templets}>/index/css/julebu.css" rel="stylesheet" type="text/css">
+    <script src="<{$templets}>/index/js/jquery.js"></script>
