--- a/view/templets/home/index/daoru04.html
+++ b/view/templets/home/index/daoru04.html
@@ -1,130 +1,8 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/fenye.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
-<script>
-$(function(){
-	$(".yi01").hover(function(){
-		var x=$(".yi01").index(this);
-		$(".erjinav").hide();
-		$(".erjinav").eq(x).show();
-		},function(){
-			
-			})
-	})
-	</script>
-<script>
-$(function(){
-	$(".erjinav").hover(function(){
-		
-		},function(){
-		$(this).hide();	
-			})
-	})
-</script>
-<style>
-body{overflow:hidden;}
-</style>
-</head>
-
-<body>
-<div class="header">
-	<div class="header_content">
-    	<div class="login"><a href="gr_tiaokuan.html">注册</a><a href="gr_denglu.html">登录</a></div>
-        <div class="login_text">立即注册成为会员</div>
-    </div>
-</div>
-<div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
-<div class="nav_box">
-    <ul class="nav">
-        <li class="yiyiyi">
-            <a href="daoru01.html" class="yi01">俱乐部</a>
-            <ul class="erjinav">
-                <li><a href="julebu.html">服务方式</a></li>
-                <li><a href="julebu.html">服务内容</a></li>
-                <li><a href="julebu.html">会员优势</a></li>
-            </ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru02.html" class="yi01">星座珠宝</a>
-            <ul class="erjinav">
-            </ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru03.html" class="yi01">珠宝世界</a>
-            <ul class="erjinav">
-                    	<li><a href="zhubao.html">项链</a></li>
-                        <li><a href="zhubao.html">吊坠</a></li>
-                        <li><a href="zhubao.html">戒指</a></li>
-                        <li><a href="zhubao.html">耳环</a></li>
-                        <li><a href="zhubao.html">手链</a></li>
-                        <li><a href="zhubao.html">腕表</a></li>
-                        <li><a href="zhubao.html">对戒</a></li>
-                        <li><a href="zhubao.html">男士珠宝</a></li>
-                    </ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru04.html" class="yi01">高级定制系列</a>
-            <ul class="erjinav">
-                    <li><a href="dingzhi_liulan.html">PROTY海盗梦系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY帝王花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY风暴系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大洋之花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY八爪鱼系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大卫之印系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY海盗皇后系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY美人鱼系列</a></li>
-            </ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru05.html" class="yi01">经典珠宝</a>
-            <ul class="erjinav">
-                <li><a href="jingdian_liulan.html">PROTY帝王花系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗梦系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗爵士系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海洋之心系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY王者之风系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗之旅系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY封印系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY黄钻系列</a></li>
-    		</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru06.html" class="yi01">PROTY之星</a>
-            <ul class="erjinav">
-                <li><a href="PROTY_xing.html">PROTY之星</a></li>
-                <li><a href="PROTY_shaitu.html">全部晒图</a></li>
-                <li><a href="PROTY_about.html">关于PTOTY之星</a></li>
-        	</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru07.html" class="yi01">品牌故事</a>
-            <ul class="erjinav">
-                    <li><a href="pinpai.html">品牌故事</a></li>
-                    <li><a href="pinpai.html">产品故事</a></li>
-                    <li><a href="pinpai.html">海上帝王花</a></li>
-            </ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru08.html" class="yi01">网络精品店</a>
-            <ul class="erjinav">
-            </ul>
-        </li>
-    </ul>
-    <div style="clear:both;"></div>
-</div>
+<{include file="common_head.html"}>
 <div class="qiehuan04 fenye">
     <div class="qiehuan_content">
-        <div class="julebu"><img src="images/julebu04.png" height="144" width="445"></div>
-        <div class="liulan"><a href="dingzhi_liulan.html">浏览高级珠宝系列</a></div>
+        <div class="julebu"><img src="<{$templets}>/index/images/julebu04.png" height="144" width="445"></div>
+        <div class="liulan"><a href="/index.php/home/index/dingzhi_liulan">浏览高级珠宝系列</a></div>
     </div>
 </div>
 
