--- a/view/templets/home/index/dingzhi_fenlei.html
+++ b/view/templets/home/index/dingzhi_fenlei.html
@@ -1,14 +1,5 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/dingzhi.css" rel="stylesheet" type="text/css">
-<script src="js/jquery.js"></script>
+<{include file="common_head1.html"}>
+<link href="<{$templets}>/index/css/dingzhi.css" rel="stylesheet" type="text/css">
 <script src="js/dingzhi.js"></script>
 <script type="text/javascript">
 		$(function(){ 
@@ -21,17 +12,17 @@
 </script>
 </head>
 
-<body style="background-image:url(images/fenlei_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
+<body style="background-image:url(<{$templets}>/index/images/fenlei_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
 <div class="top_nav" style="position:fixed;left:0;top:0;">
     <ul class="nav01" style="display:none;">
-            <li><a href="daoru01.html">俱乐部</a></li>
-            <li><a href="daoru02.html">星座珠宝</a></li>
-            <li><a href="daoru03.html">珠宝世界</a></li>
-            <li><a href="daoru04.html" class="curr_a1">高级定制系列</a></li>
-            <li><a href="daoru05.html">经典珠宝</a></li>
-            <li><a href="daoru06.html">PROTY之星</a></li>
-            <li><a href="daoru07.html">品牌故事</a></li>
-            <li><a href="daoru08.html">网络精品店</a></li>
+            <li><a href="/index.php/home/index/daoru01">俱乐部</a></li>
+            <li><a href="/index.php/home/index/daoru02">星座珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru03">珠宝世界</a></li>
+            <li><a href="/index.php/home/index/daoru04" class="curr_a1">高级定制系列</a></li>
+            <li><a href="/index.php/home/index/daoru05">经典珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru06">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/daoru07">品牌故事</a></li>
+            <li><a href="/index.php/home/index/daoru08">网络精品店</a></li>
     </ul>
     <ul class="nav02" style="width:1200px;">
             <li><a href="">PROTY海盗梦系列</a></li>
@@ -44,127 +35,127 @@
             <li><a href="">PROTY美人鱼系列</a></li>
     </ul>
 </div>
-<div class="logo" style="position:static;margin-top:80px;"><a href="index.html"><img src="images/logo.png"></a></div>
-<div class="xixian"><img src="images/zhi01.png"></div>
+<div class="logo" style="position:static;margin-top:80px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
+<div class="xixian"><img src="<{$templets}>/index/images/zhi01.png"></div>
 <div class="chanpin_box">
 	<div class="chanpin01">
         	<ul class="tu_ji">
-            	<li style="display:block;"><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin01.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin02.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin03.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin04.png"></a></li>
+            	<li style="display:block;"><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin01.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin02.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin03.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin04.png"></a></li>
             </ul>
             <div class="chanpin_leibie">项链</div>
         	<ul class="zhishi">
-                <li><a href="dingzhi_fenlei_xq.html">祖母绿</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">红宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">蓝宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">钻石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">祖母绿</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">红宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">蓝宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">钻石</a></li>
        	   </ul>
     </div>
     <div class="chanpin01">
         	<ul class="tu_ji">
-            	<li style="display:block;"><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin02.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin01.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin03.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin04.png"></a></li>
+            	<li style="display:block;"><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin02.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin01.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin03.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin04.png"></a></li>
             </ul>
             <div class="chanpin_leibie">项链</div>
         	<ul class="zhishi">
-                <li><a href="dingzhi_fenlei_xq.html">祖母绿</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">红宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">蓝宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">钻石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">祖母绿</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">红宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">蓝宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">钻石</a></li>
        	   </ul>
     </div>
     <div class="chanpin01">
         	<ul class="tu_ji">
-            	<li style="display:block;"><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin03.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin02.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin01.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin04.png"></a></li>
+            	<li style="display:block;"><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin03.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin02.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin01.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin04.png"></a></li>
             </ul>
             <div class="chanpin_leibie">项链</div>
         	<ul class="zhishi">
-                <li><a href="dingzhi_fenlei_xq.html">祖母绿</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">红宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">蓝宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">钻石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">祖母绿</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">红宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">蓝宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">钻石</a></li>
        	   </ul>
     </div>
     <div class="chanpin01">
         	<ul class="tu_ji">
-            	<li style="display:block;"><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin04.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin02.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin01.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin03.png"></a></li>
+            	<li style="display:block;"><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin04.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin02.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin01.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin03.png"></a></li>
             </ul>
             <div class="chanpin_leibie">项链</div>
         	<ul class="zhishi">
-                <li><a href="dingzhi_fenlei_xq.html">祖母绿</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">红宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">蓝宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">钻石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">祖母绿</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">红宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">蓝宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">钻石</a></li>
        	   </ul>
     </div>
     <div class="chanpin01">
         	<ul class="tu_ji">
-            	<li style="display:block;"><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin05.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin06.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin07.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin08.png"></a></li>
+            	<li style="display:block;"><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin05.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin06.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin07.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin08.png"></a></li>
             </ul>
             <div class="chanpin_leibie">项链</div>
         	<ul class="zhishi">
-                <li><a href="dingzhi_fenlei_xq.html">祖母绿</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">红宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">蓝宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">钻石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">祖母绿</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">红宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">蓝宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">钻石</a></li>
        	   </ul>
     </div>
     <div class="chanpin01">
         	<ul class="tu_ji">
-            	<li style="display:block;"><a href=""><img src="images/chanpin06.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin05.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin07.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin08.png"></a></li>
+            	<li style="display:block;"><a href=""><img src="<{$templets}>/index/images/chanpin06.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin05.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin07.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin08.png"></a></li>
             </ul>
             <div class="chanpin_leibie">项链</div>
         	<ul class="zhishi">
-                <li><a href="dingzhi_fenlei_xq.html">祖母绿</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">红宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">蓝宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">钻石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">祖母绿</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">红宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">蓝宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">钻石</a></li>
        	   </ul>
     </div>
      <div class="chanpin01">
         	<ul class="tu_ji">
-            	<li style="display:block;"><a href=""><img src="images/chanpin07.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin05.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin06.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin08.png"></a></li>
+            	<li style="display:block;"><a href=""><img src="<{$templets}>/index/images/chanpin07.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin05.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin06.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin08.png"></a></li>
             </ul>
             <div class="chanpin_leibie">项链</div>
         	<ul class="zhishi">
-                <li><a href="dingzhi_fenlei_xq.html">祖母绿</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">红宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">蓝宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">钻石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">祖母绿</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">红宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">蓝宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">钻石</a></li>
        	   </ul>
     </div>
     <div class="chanpin01">
         	<ul class="tu_ji">
-            	<li style="display:block;"><a href=""><img src="images/chanpin08.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin06.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin07.png"></a></li>
-                <li><a href="dingzhi_fenlei_xq.html"><img src="images/chanpin05.png"></a></li>
+            	<li style="display:block;"><a href=""><img src="<{$templets}>/index/images/chanpin08.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin06.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin07.png"></a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq"><img src="<{$templets}>/index/images/chanpin05.png"></a></li>
             </ul>
             <div class="chanpin_leibie">项链</div>
         	<ul class="zhishi">
-                <li><a href="dingzhi_fenlei_xq.html">祖母绿</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">红宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">蓝宝石</a></li>
-                <li><a href="dingzhi_fenlei_xq.html">钻石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">祖母绿</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">红宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">蓝宝石</a></li>
+                <li><a href="/index.php/home/index/dingzhi_fenlei_xq">钻石</a></li>
        	   </ul>
     </div>
 </div>
