--- a/view/templets/home/index/gr_zixun.html
+++ b/view/templets/home/index/gr_zixun.html
@@ -6,11 +6,11 @@
 <meta name="keywords" content="HTML,CSS,JavaScript">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/gr.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/gr.js"></script>
-<script src="js/jquery.SuperSlide.2.1.1.js"></script>
+<link href="<{$templets}>/index/css/base.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/gr.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="<{$templets}>/index/js/jquery.js"></script>
+<script type="text/javascript" src="<{$templets}>/index/js/gr.js"></script>
+<script src="<{$templets}>/index/js/jquery.SuperSlide.2.1.1.js"></script>
 <script>
 $(function(){
 	$(".yi01").hover(function(){
@@ -33,86 +33,86 @@ $(function(){
 </script>
 </head>
 
-<body style="background-image:url(images/gr_back.png);">
+<body style="background-image:url(<{$templets}>/index/images/gr_back.png);">
 <div class="header" style="position:static;">
 	<div class="header_content">
-    	<div class="login"><a href="gr_tiaokuan.html">注册</a><a href="gr_denglu.html">登录</a></div>
+    	<div class="login"><a href="/index.php/home/index/gr_tiaokuan">注册</a><a href="/index.php/home/index/gr_denglu">登录</a></div>
         <div class="login_text">立即注册成为会员</div>
     </div>
 </div>
-<div class="logo" style="position:static;margin-top:38px;"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="logo" style="position:static;margin-top:38px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
 <div class="nav_box" style="position:static;margin-top:18px;">
     <ul class="nav">
         <li class="yiyiyi">
-            <a href="daoru01.html" class="yi01">俱乐部</a>
+            <a href="/index.php/home/index/daoru01" class="yi01">俱乐部</a>
             <ul class="erjinav">
-                <li><a href="julebu.html">服务方式</a></li>
-                <li><a href="julebu.html">服务内容</a></li>
-                <li><a href="julebu.html">会员优势</a></li>
+                <li><a href="/index.php/home/index/julebu">服务方式</a></li>
+                <li><a href="/index.php/home/index/julebu">服务内容</a></li>
+                <li><a href="/index.php/home/index/julebu">会员优势</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru02.html" class="yi01">星座珠宝</a>
+            <a href="/index.php/home/index/daoru02" class="yi01">星座珠宝</a>
             <ul class="erjinav">
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru03.html" class="yi01">珠宝世界</a>
+            <a href="/index.php/home/index/daoru03" class="yi01">珠宝世界</a>
             <ul class="erjinav">
-                    	<li><a href="zhubao.html">项链</a></li>
-                        <li><a href="zhubao.html">吊坠</a></li>
-                        <li><a href="zhubao.html">戒指</a></li>
-                        <li><a href="zhubao.html">耳环</a></li>
-                        <li><a href="zhubao.html">手链</a></li>
-                        <li><a href="zhubao.html">腕表</a></li>
-                        <li><a href="zhubao.html">对戒</a></li>
-                        <li><a href="zhubao.html">男士珠宝</a></li>
-                    </ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru04.html" class="yi01">高级定制系列</a>
-            <ul class="erjinav">
-                    <li><a href="dingzhi_liulan.html">PROTY海盗梦系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY帝王花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY风暴系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大洋之花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY八爪鱼系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大卫之印系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY海盗皇后系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY美人鱼系列</a></li>
+                <li><a href="/index.php/home/index/zhubao">项链</a></li>
+                <li><a href="/index.php/home/index/zhubao">吊坠</a></li>
+                <li><a href="/index.php/home/index/zhubao">戒指</a></li>
+                <li><a href="/index.php/home/index/zhubao">耳环</a></li>
+                <li><a href="/index.php/home/index/zhubao">手链</a></li>
+                <li><a href="/index.php/home/index/zhubao">腕表</a></li>
+                <li><a href="/index.php/home/index/zhubao">对戒</a></li>
+                <li><a href="/index.php/home/index/zhubao">男士珠宝</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru05.html" class="yi01">经典珠宝</a>
+            <a href="/index.php/home/index/daoru04" class="yi01">高级定制系列</a>
             <ul class="erjinav">
-                <li><a href="jingdian_liulan.html">PROTY帝王花系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗梦系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗爵士系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海洋之心系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY王者之风系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗之旅系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY封印系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY黄钻系列</a></li>
-    		</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru06.html" class="yi01">PROTY之星</a>
-            <ul class="erjinav">
-                <li><a href="PROTY_xing.html">PROTY之星</a></li>
-                <li><a href="PROTY_shaitu.html">全部晒图</a></li>
-                <li><a href="PROTY_about.html">关于PTOTY之星</a></li>
-        	</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru07.html" class="yi01">品牌故事</a>
-            <ul class="erjinav">
-                    <li><a href="pinpai.html">品牌故事</a></li>
-                    <li><a href="pinpai.html">产品故事</a></li>
-                    <li><a href="pinpai.html">海上帝王花</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY海盗梦系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY帝王花系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY风暴系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY大洋之花系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY八爪鱼系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY大卫之印系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY海盗皇后系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY美人鱼系列</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru08.html" class="yi01">网络精品店</a>
+            <a href="/index.php/home/index/daoru05" class="yi01">经典珠宝</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY帝王花系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗梦系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗爵士系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海洋之心系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY王者之风系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗之旅系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY封印系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY黄钻系列</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru06" class="yi01">PROTY之星</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/PROTY_xing">PROTY之星</a></li>
+                <li><a href="/index.php/home/index/PROTY_shaitu">全部晒图</a></li>
+                <li><a href="/index.php/home/index/PROTY_about">关于PTOTY之星</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru07" class="yi01">品牌故事</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/pinpai">品牌故事</a></li>
+                <li><a href="/index.php/home/index/pinpai">产品故事</a></li>
+                <li><a href="/index.php/home/index/pinpai">海上帝王花</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="/index.php/home/index/daoru08" class="yi01">网络精品店</a>
             <ul class="erjinav">
             </ul>
         </li>
@@ -120,40 +120,40 @@ $(function(){
     <div style="clear:both;"></div>
 </div>
 <div class="about">
-	<div class="about_top"><img src="images/dd01.png"></div>
+	<div class="about_top"><img src="<{$templets}>/index/images/dd01.png"></div>
     <div class="zixun_box">
     <div id="slideBox11" class="slideBox11">
                     <div class="bd11">
                         <ul>
                             <li>
-                            	<a href="gr_zixun_xq.html"><img alt="" src="images/zi01.png"/></a>
+                            	<a href="/index.php/home/index/gr_zixun_xq"><img alt="" src="<{$templets}>/index/images/zi01.png"/></a>
                                 <div class="zixun_tt01">18.07.2015</div>
-                                <div class="zixun_tt02"><a href="gr_zixun_xq.html">匠心，永恒——PROTY珠宝创意中心大师工作室</a></div>
+                                <div class="zixun_tt02"><a href="/index.php/home/index/gr_zixun_xq">匠心，永恒——PROTY珠宝创意中心大师工作室</a></div>
                             </li>
                             <li>
-                            	<a href="gr_zixun_xq.html"><img alt="" src="images/zi02.png"/></a>
+                            	<a href="/index.php/home/index/gr_zixun_xq"><img alt="" src="<{$templets}>/index/images/zi02.png"/></a>
                                 <div class="zixun_tt01">06.07.2015</div>
-                                <div class="zixun_tt02"><a href="gr_zixun_xq.html">设想未来 畅想无限——PROTY「设.想未来」大学生首饰创意设计大赛艺术展隆重启动</a></div>
+                                <div class="zixun_tt02"><a href="/index.php/home/index/gr_zixun_xq">设想未来 畅想无限——PROTY「设.想未来」大学生首饰创意设计大赛艺术展隆重启动</a></div>
                             </li>
                             <li>
-                            	<a href="gr_zixun_xq.html"><img alt="" src="images/zi03.png"/></a>
+                            	<a href="/index.php/home/index/gr_zixun_xq"><img alt="" src="<{$templets}>/index/images/zi03.png"/></a>
                                 <div class="zixun_tt01">17.06.2015</div>
-                                <div class="zixun_tt02"><a href="gr_zixun_xq.html">敬•生命之美——PROTY艺术珠宝闪耀米兰世博中国馆</a></div>
+                                <div class="zixun_tt02"><a href="/index.php/home/index/gr_zixun_xq">敬•生命之美——PROTY艺术珠宝闪耀米兰世博中国馆</a></div>
                             </li>
                             <li>
-                            	<a href="gr_zixun_xq.html"><img alt="" src="images/zi01.png"/></a>
+                            	<a href="/index.php/home/index/gr_zixun_xq"><img alt="" src="<{$templets}>/index/images/zi01.png"/></a>
                                 <div class="zixun_tt01">18.07.2015</div>
-                                <div class="zixun_tt02"><a href="gr_zixun_xq.html">匠心，永恒——PROTY珠宝创意中心大师工作室</a></div>
+                                <div class="zixun_tt02"><a href="/index.php/home/index/gr_zixun_xq">匠心，永恒——PROTY珠宝创意中心大师工作室</a></div>
                             </li>
                             <li>
-                            	<a href="gr_zixun_xq.html"><img alt="" src="images/zi02.png"/></a>
+                            	<a href="/index.php/home/index/gr_zixun_xq"><img alt="" src="<{$templets}>/index/images/zi02.png"/></a>
                                 <div class="zixun_tt01">06.07.2015</div>
-                                <div class="zixun_tt02"><a href="gr_zixun_xq.html">设想未来 畅想无限——PROTY「设.想未来」大学生首饰创意设计大赛艺术展隆重启动</a></div>
+                                <div class="zixun_tt02"><a href="/index.php/home/index/gr_zixun_xq">设想未来 畅想无限——PROTY「设.想未来」大学生首饰创意设计大赛艺术展隆重启动</a></div>
                             </li>
                             <li>
-                            	<a href="gr_zixun_xq.html"><img alt="" src="images/zi03.png"/></a>
+                            	<a href="/index.php/home/index/gr_zixun_xq"><img alt="" src="<{$templets}>/index/imageshref/zi03.png"/></a>
                                 <div class="zixun_tt01">17.06.2015</div>
-                                <div class="zixun_tt02"><a href="gr_zixun_xq.html">敬•生命之美——PROTY艺术珠宝闪耀米兰世博中国馆</a></div>
+                                <div class="zixun_tt02"><a href="/index.php/home/index/gr_zixun_xq">敬•生命之美——PROTY艺术珠宝闪耀米兰世博中国馆</a></div>
                             </li>
                         </ul>
                     </div>
@@ -165,10 +165,10 @@ $(function(){
         jQuery(".slideBox11").slide({mainCell:".bd11 ul",vis:3,effect:"leftLoop",autoPlay:false});
     </script>
     </div>
-    
-    
-    
-    
+
+
+
+
 </div>
 <!--footer-->
 <{include file="common_foot.html"}>
