--- a/view/templets/home/index/index.html
+++ b/view/templets/home/index/index.html
@@ -6,15 +6,15 @@
 <meta name="keywords" content="HTML,CSS,JavaScript">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/index.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="css/supersized.css" type="text/css" media="screen" />
+<link href="<{$templets}>/index/css/base.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/index.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="<{$templets}>/index/css/supersized.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="theme/supersized.shutter.css" type="text/css" media="screen" />
-<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
-<script type="text/javascript" src="js/jquery.easing.min.js"></script>
-<script type="text/javascript" src="js/supersized.3.2.7.min.js"></script>
+<script type="text/javascript" src="<{$templets}>/index/js/jquery-1.11.2.js"></script>
+<script type="text/javascript" src="<{$templets}>/index/js/jquery.easing.min.js"></script>
+<script type="text/javascript" src="<{$templets}>/index/js/supersized.3.2.7.min.js"></script>
 <script type="text/javascript" src="theme/supersized.shutter.min.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="<{$templets}>/index/js/index.js"></script>
 <script type="text/javascript">
 			jQuery(function($){
 				$.supersized({
@@ -25,12 +25,12 @@
 															   
 					// Components							
 					slide_links				:	'blank',	// Individual links for each slide (Options: false, 'num', 'name', 'blank')
-					slides 					:  	[			// Slideshow Images
-														{image : 'images/body_back.png', title : 'Image Credit: Maria Kazvan', thumb : '', url : ''},
-														{image : 'images/body_back01.png', title : 'Image Credit: Maria Kazvan', thumb : '', url : ''},
-														{image : 'images/body_back02.png', title : 'Image Credit: Maria Kazvan', thumb : '', url : ''}
+					slides 					:  	[			// Slideshow <{$templets}>/pld3/index/images
+														{image : '<{$templets}>/index/images/body_back.png', title : 'Image Credit: Maria Kazvan', thumb : '', url : ''},
+														{image : '<{$templets}>/index/images/body_back01.png', title : 'Image Credit: Maria Kazvan', thumb : '', url : ''},
+														{image : '<{$templets}>/index/images/body_back02.png', title : 'Image Credit: Maria Kazvan', thumb : '', url : ''}
 												]
-					
+
 				});
 		    });
 </script>
@@ -41,16 +41,16 @@ $(function(){
 		$(".erjinav").hide();
 		$(".erjinav").eq(x).show();
 		},function(){
-			
+
 			})
 	})
 	</script>
 <script>
 $(function(){
 	$(".erjinav").hover(function(){
-		
+
 		},function(){
-		$(this).hide();	
+		$(this).hide();
 			})
 	})
 </script>
@@ -62,10 +62,10 @@ $(function(){
 		$(".fenye").hide();
 		$(".fenye").eq(x).fadeTo("1500",1);
 		$(".fenye").eq(x).children(".qiehuan_content").children(".julebu").animate({left:'100'},1500);
-  	
+
 		},function(){
-		
-			
+
+
 			})
 	})
 
@@ -84,83 +84,83 @@ body{overflow:hidden;}
 <body>
 <div class="header">
 	<div class="header_content">
-    	<div class="login"><a href="gr_tiaokuan.html">注册</a><a href="gr_denglu.html">登录</a></div>
+    	<div class="login"><a href="/index.php/home/index/gr_tiaokuan">注册</a><a href="/index.php/home/index/gr_denglu">登录</a></div>
         <div class="login_text">立即注册成为会员</div>
     </div>
 </div>
-<div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="logo"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
 <div class="nav_box">
     <ul class="nav">
         <li class="yiyiyi">
-            <a href="daoru01.html" class="yi01">俱乐部</a>
+            <a href="/index.php/home/index/daoru01" class="yi01">俱乐部</a>
             <ul class="erjinav">
-                <li><a href="julebu.html">服务方式</a></li>
-                <li><a href="julebu.html">服务内容</a></li>
-                <li><a href="julebu.html">会员优势</a></li>
+                <li><a href="/index.php/home/index/julebu">服务方式</a></li>
+                <li><a href="/index.php/home/index/julebu">服务内容</a></li>
+                <li><a href="/index.php/home/index/julebu">会员优势</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru02.html" class="yi01">星座珠宝</a>
+            <a href="/index.php/home/index/daoru02" class="yi01">星座珠宝</a>
             <ul class="erjinav">
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru03.html" class="yi01">珠宝世界</a>
+            <a href="/index.php/home/index/daoru03" class="yi01">珠宝世界</a>
             <ul class="erjinav">
-                    	<li><a href="zhubao.html">项链</a></li>
-                        <li><a href="zhubao.html">吊坠</a></li>
-                        <li><a href="zhubao.html">戒指</a></li>
-                        <li><a href="zhubao.html">耳环</a></li>
-                        <li><a href="zhubao.html">手链</a></li>
-                        <li><a href="zhubao.html">腕表</a></li>
-                        <li><a href="zhubao.html">对戒</a></li>
-                        <li><a href="zhubao.html">男士珠宝</a></li>
-                    </ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru04.html" class="yi01">高级定制系列</a>
-            <ul class="erjinav">
-                    <li><a href="dingzhi_liulan.html">PROTY海盗梦系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY帝王花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY风暴系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大洋之花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY八爪鱼系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大卫之印系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY海盗皇后系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY美人鱼系列</a></li>
+                <li><a href="/index.php/home/index/zhubao">项链</a></li>
+                <li><a href="/index.php/home/index/zhubao">吊坠</a></li>
+                <li><a href="/index.php/home/index/zhubao">戒指</a></li>
+                <li><a href="/index.php/home/index/zhubao">耳环</a></li>
+                <li><a href="/index.php/home/index/zhubao">手链</a></li>
+                <li><a href="/index.php/home/index/zhubao">腕表</a></li>
+                <li><a href="/index.php/home/index/zhubao">对戒</a></li>
+                <li><a href="/index.php/home/index/zhubao">男士珠宝</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru05.html" class="yi01">经典珠宝</a>
+            <a href="/index.php/home/index/daoru04" class="yi01">高级定制系列</a>
             <ul class="erjinav">
-                <li><a href="jingdian_liulan.html">PROTY帝王花系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗梦系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗爵士系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海洋之心系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY王者之风系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗之旅系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY封印系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY黄钻系列</a></li>
-    		</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru06.html" class="yi01">PROTY之星</a>
-            <ul class="erjinav">
-                <li><a href="PROTY_xing.html">PROTY之星</a></li>
-                <li><a href="PROTY_shaitu.html">全部晒图</a></li>
-                <li><a href="PROTY_about.html">关于PTOTY之星</a></li>
-        	</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru07.html" class="yi01">品牌故事</a>
-            <ul class="erjinav">
-                    <li><a href="pinpai.html">品牌故事</a></li>
-                    <li><a href="pinpai.html">产品故事</a></li>
-                    <li><a href="pinpai.html">海上帝王花</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY海盗梦系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY帝王花系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY风暴系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY大洋之花系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY八爪鱼系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY大卫之印系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY海盗皇后系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY美人鱼系列</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru08.html" class="yi01">网络精品店</a>
+            <a href="/index.php/home/index/daoru05" class="yi01">经典珠宝</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY帝王花系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗梦系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗爵士系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海洋之心系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY王者之风系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗之旅系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY封印系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY黄钻系列</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru06" class="yi01">PROTY之星</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/PROTY_xing">PROTY之星</a></li>
+                <li><a href="/index.php/home/index/PROTY_shaitu">全部晒图</a></li>
+                <li><a href="/index.php/home/index/PROTY_about">关于PTOTY之星</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru07" class="yi01">品牌故事</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/pinpai">品牌故事</a></li>
+                <li><a href="/index.php/home/index/pinpai">产品故事</a></li>
+                <li><a href="/index.php/home/index/pinpai">海上帝王花</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="/index.php/home/index/daoru08" class="yi01">网络精品店</a>
             <ul class="erjinav">
             </ul>
         </li>
@@ -168,56 +168,56 @@ body{overflow:hidden;}
     <div style="clear:both;"></div>
 </div>
 <div class="fenye_content">
-     <div class="left01"><img src="images/left01.png" src="images/body_back.png"></div>
+     <div class="left01"><img src="<{$templets}>/index/images/left01.png" src="<{$templets}>/index/images/body_back.png"></div>
      <div class="fajue">发掘珠宝的醉人魅力</div>
-     <div class="liulan" style="padding-top:0;"><a href="zhubao.html">浏览全部珠宝</a></div>
+     <div class="liulan" style="padding-top:0;"><a href="/index.php/home/index/zhubao">浏览全部珠宝</a></div>
 </div>
 <div class="qiehuan01 fenye">
     <div class="qiehuan_content">
-        <div class="julebu"><img src="images/julebu01.png" height="192" width="448"></div>
-        <div class="liulan"><a href="daoru01.html">加入俱乐部</a></div>
+        <div class="julebu"><img src="<{$templets}>/index/images/julebu01.png" height="192" width="448"></div>
+        <div class="liulan"><a href="/index.php/home/index/daoru01">加入俱乐部</a></div>
     </div>
 </div>
 <div class="qiehuan02 fenye">
     <div class="qiehuan_content">
-        <div class="julebu"><img src="images/julebu02.png" height="239" width="371"></div>
-        <div class="liulan"><a href="daoru02.html">查看详情</a></div>
+        <div class="julebu"><img src="<{$templets}>/index/images/julebu02.png" height="239" width="371"></div>
+        <div class="liulan"><a href="/index.php/home/index/daoru02">查看详情</a></div>
     </div>
 </div>
 <div class="qiehuan03 fenye">
     <div class="qiehuan_content">
-        <div class="julebu"><img src="images/julebu03.png" height="144" width="452"></div>
-        <div class="liulan"><a href="daoru03.html">浏览珠宝世界</a></div>
+        <div class="julebu"><img src="<{$templets}>/index/images/julebu03.png" height="144" width="452"></div>
+        <div class="liulan"><a href="/index.php/home/index/daoru03">浏览珠宝世界</a></div>
     </div>
 </div>
 <div class="qiehuan04 fenye">
     <div class="qiehuan_content">
-        <div class="julebu"><img src="images/julebu04.png" height="144" width="445"></div>
-        <div class="liulan"><a href="daoru04.html">浏览高级珠宝系列</a></div>
+        <div class="julebu"><img src="<{$templets}>/index/images/julebu04.png" height="144" width="445"></div>
+        <div class="liulan"><a href="/index.php/home/index/daoru04">浏览高级珠宝系列</a></div>
     </div>
 </div>
 <div class="qiehuan05 fenye">
     <div class="qiehuan_content">
-        <div class="julebu"><img src="images/julebu05.png" height="144" width="447"></div>
-        <div class="liulan"><a href="daoru05.html">浏览经典珠宝</a></div>
+        <div class="julebu"><img src="<{$templets}>/index/images/julebu05.png" height="144" width="447"></div>
+        <div class="liulan"><a href="/index.php/home/index/daoru05">浏览经典珠宝</a></div>
     </div>
 </div>
 <div class="qiehuan06 fenye">
     <div class="qiehuan_content">
-        <div class="julebu"><img src="images/julebu06.png" height="135" width="384"></div>
-        <div class="liulan"><a href="daoru06.html">浏览PROTY之星</a></div>
+        <div class="julebu"><img src="<{$templets}>/index/images/julebu06.png" height="135" width="384"></div>
+        <div class="liulan"><a href="/index.php/home/index/daoru06">浏览PROTY之星</a></div>
     </div>
 </div>
 <div class="qiehuan07 fenye">
     <div class="qiehuan_content">
-        <div class="julebu"><img src="images/julebu07.png" height="257" width="368"></div>
-        <div class="liulan"><a href="daoru07.html">浏览品牌故事</a></div>
+        <div class="julebu"><img src="<{$templets}>/index/images/julebu07.png" height="257" width="368"></div>
+        <div class="liulan"><a href="/index.php/home/index/daoru07">浏览品牌故事</a></div>
     </div>
 </div>
 <div class="qiehuan08 fenye">
     <div class="qiehuan_content">
-        <div class="julebu"><img src="images/julebu08.png" height="139" width="368"></div>
-        <div class="liulan"><a href="daoru08.html">浏览网络精品店</a></div>
+        <div class="julebu"><img src="<{$templets}>/index/images/julebu08.png" height="139" width="368"></div>
+        <div class="liulan"><a href="/index.php/home/index/daoru08">浏览网络精品店</a></div>
     </div>
 </div>
 <!--footer-->
