--- a/view/templets/home/index/jifen_duihuan01.html
+++ b/view/templets/home/index/jifen_duihuan01.html
@@ -6,12 +6,12 @@
 <meta name="keywords" content="HTML,CSS,JavaScript">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/vip.css" rel="stylesheet" type="text/css">
-<link href="css/dingdan.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/base.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/vip.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/dingdan.css" rel="stylesheet" type="text/css">
 <link href="css/ziliao.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/gr.js"></script>
+<script type="text/javascript" src="<{$templets}>/index/js/jquery.js"></script>
+<script type="text/javascript" src="<{$templets}>/index/js/gr.js"></script>
 <script>
 $(function(){
 	$(".yi01").hover(function(){
@@ -35,7 +35,7 @@ $(function(){
 
 </head>
 
-<body style="background-image:url(images/gr_back.png);">
+<body style="background-image:url(<{$templets}>/index/images/gr_back.png);">
 <div class="header" style="position:static;">
 	<div class="header_content" style="overflow:visible;">
     	<div class="vip01">尊敬的    小花，您好&nbsp;&nbsp;|<a href="">退出</a></div>
@@ -45,9 +45,9 @@ $(function(){
             	<div class="zuijin">最近加入的宝贝：</div>
                 <ul class="bao">
                 	<li>
-                    	<div class="bao_left"><a href="zhubao_xq.html"><img src="images/chanpin05.png"></a></div>
+                    	<div class="bao_left"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/chanpin05.png"></a></div>
                         <div class="bao_right">
-                        	<div class="bao_name"><a href="zhubao_xq.html">精美吊坠精美吊坠精美吊坠</a></div>
+                        	<div class="bao_name"><a href="/index.php/home/index/zhubao_xq">精美吊坠精美吊坠精美吊坠</a></div>
                             <div class="bao_name01">款式类型：经典</div>
                         </div>
                         <div class="bao_right01">
@@ -56,9 +56,9 @@ $(function(){
                         </div>
                     </li>
                     <li>
-                    	<div class="bao_left"><a href="zhubao_xq.html"><img src="images/chanpin05.png"></a></div>
+                    	<div class="bao_left"><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/chanpin05.png"></a></div>
                         <div class="bao_right">
-                        	<div class="bao_name"><a href="zhubao_xq.html">精美吊坠精美吊坠精美吊坠</a></div>
+                        	<div class="bao_name"><a href="/index.php/home/index/zhubao_xq">精美吊坠精美吊坠精美吊坠</a></div>
                             <div class="bao_name01">款式类型：经典</div>
                         </div>
                         <div class="bao_right01">
@@ -67,94 +67,107 @@ $(function(){
                         </div>
                     </li>
                 </ul>
-                <div class="chakan"><a href="yuanwang.html">查看我的愿望中心</a></div>
+                <div class="chakan"><a href="/index.php/home/index/yuanwang">查看我的愿望中心</a></div>
             </div>
         </div>
         <div class="vip03">
         	<div class="gouwu">我的 PROTY</div>
             <ul class="me">
-            	<li><a href="vip.html">用户中心</a></li>
-                <li><a href="yuanwang.html">我的愿望中心</a></li>
-                <li><a href="vip_dingdan.html">我的订单</a></li>
+            	<li><a href="/index.php/home/index/vip">用户中心</a></li>
+                <li><a href="/index.php/home/index/yuanwang">我的愿望中心</a></li>
+                <li><a href="/index.php/home/index/vip_dingdan">我的订单</a></li>
             </ul>
         </div>
         <div class="vip04">400-155-3023</div>
         <div style="clear:both;"></div>
     </div>
 </div>
-<div class="logo" style="position:static;margin-top:38px;"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="logo" style="position:static;margin-top:38px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
 <div class="nav_box" style="position:static;margin-top:18px;">
     <ul class="nav">
         <li class="yiyiyi">
-            <a href="daoru01.html" class="yi01">俱乐部</a>
+            <a href="/index.php/home/index/daoru01" class="yi01">俱乐部</a>
             <ul class="erjinav">
-                <li><a href="julebu.html">服务方式</a></li>
-                <li><a href="julebu.html">服务内容</a></li>
-                <li><a href="julebu.html">会员优势</a></li>
+                <li><a href="/index.php/home/index/julebu">服务方式</a></li>
+                <li><a href="/index.php/home/index/julebu">服务内容</a></li>
+                <li><a href="/index.php/home/index/julebu">会员优势</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru02.html" class="yi01">星座珠宝</a>
+        	<a href="/index.php/home/index/daoru02" class="yi01">星座珠宝</a>
             <ul class="erjinav">
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru03.html" class="yi01">珠宝世界</a>
+            <a href="/index.php/home/index/daoru01" class="yi01">俱乐部</a>
             <ul class="erjinav">
-                    	<li><a href="zhubao.html">项链</a></li>
-                        <li><a href="zhubao.html">吊坠</a></li>
-                        <li><a href="zhubao.html">戒指</a></li>
-                        <li><a href="zhubao.html">耳环</a></li>
-                        <li><a href="zhubao.html">手链</a></li>
-                        <li><a href="zhubao.html">腕表</a></li>
-                        <li><a href="zhubao.html">对戒</a></li>
-                        <li><a href="zhubao.html">男士珠宝</a></li>
-                    </ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru04.html" class="yi01">高级定制系列</a>
-            <ul class="erjinav">
-                    <li><a href="dingzhi_liulan.html">PROTY海盗梦系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY帝王花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY风暴系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大洋之花系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY八爪鱼系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY大卫之印系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY海盗皇后系列</a></li>
-                    <li><a href="dingzhi_liulan.html">PROTY美人鱼系列</a></li>
+                <li><a href="/index.php/home/index/julebu">服务方式</a></li>
+                <li><a href="/index.php/home/index/julebu">服务内容</a></li>
+                <li><a href="/index.php/home/index/julebu">会员优势</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru05.html" class="yi01">经典珠宝</a>
+            <a href="/index.php/home/index/daoru02" class="yi01">星座珠宝</a>
             <ul class="erjinav">
-                <li><a href="jingdian_liulan.html">PROTY帝王花系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗梦系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗爵士系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海洋之心系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY王者之风系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY海盗之旅系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY封印系列</a></li>
-                <li><a href="jingdian_liulan.html">PROTY黄钻系列</a></li>
-    		</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru06.html" class="yi01">PROTY之星</a>
-            <ul class="erjinav">
-                <li><a href="PROTY_xing.html">PROTY之星</a></li>
-                <li><a href="PROTY_shaitu.html">全部晒图</a></li>
-                <li><a href="PROTY_about.html">关于PTOTY之星</a></li>
-        	</ul>
-        </li>
-        <li class="yiyiyi">
-        	<a href="daoru07.html" class="yi01">品牌故事</a>
-            <ul class="erjinav">
-                    <li><a href="pinpai.html">品牌故事</a></li>
-                    <li><a href="pinpai.html">产品故事</a></li>
-                    <li><a href="pinpai.html">海上帝王花</a></li>
             </ul>
         </li>
         <li class="yiyiyi">
-        	<a href="daoru08.html" class="yi01">网络精品店</a>
+            <a href="/index.php/home/index/daoru03" class="yi01">珠宝世界</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/zhubao">项链</a></li>
+                <li><a href="/index.php/home/index/zhubao">吊坠</a></li>
+                <li><a href="/index.php/home/index/zhubao">戒指</a></li>
+                <li><a href="/index.php/home/index/zhubao">耳环</a></li>
+                <li><a href="/index.php/home/index/zhubao">手链</a></li>
+                <li><a href="/index.php/home/index/zhubao">腕表</a></li>
+                <li><a href="/index.php/home/index/zhubao">对戒</a></li>
+                <li><a href="/index.php/home/index/zhubao">男士珠宝</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru04" class="yi01">高级定制系列</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY海盗梦系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY帝王花系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY风暴系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY大洋之花系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY八爪鱼系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY大卫之印系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY海盗皇后系列</a></li>
+                <li><a href="/index.php/home/index/dingzhi_liulan">PROTY美人鱼系列</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru05" class="yi01">经典珠宝</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY帝王花系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗梦系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗爵士系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海洋之心系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY王者之风系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY海盗之旅系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY封印系列</a></li>
+                <li><a href="/index.php/home/index/jingdian_liulan">PROTY黄钻系列</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru06" class="yi01">PROTY之星</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/PROTY_xing">PROTY之星</a></li>
+                <li><a href="/index.php/home/index/PROTY_shaitu">全部晒图</a></li>
+                <li><a href="/index.php/home/index/PROTY_about">关于PTOTY之星</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru07" class="yi01">品牌故事</a>
+            <ul class="erjinav">
+                <li><a href="/index.php/home/index/pinpai">品牌故事</a></li>
+                <li><a href="/index.php/home/index/pinpai">产品故事</a></li>
+                <li><a href="/index.php/home/index/pinpai">海上帝王花</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+            <a href="/index.php/home/index/daoru08" class="yi01">网络精品店</a>
             <ul class="erjinav">
             </ul>
         </li>
@@ -167,9 +180,9 @@ $(function(){
         <div class="feji_right">欢迎,Heidi&nbsp;&nbsp;&nbsp;&nbsp;你有10积分&nbsp;&nbsp;&nbsp;&nbsp;<a href=""> 查看我的积分</a></div>
     </div>
     <ul class="dh_box">
-    	<li><a href="jifen_duihuan02.html"><img src="images/duihuan.png"></a></li>
-        <li><a href="jifen_duihuan02.html"><img src="images/duihuan.png"></a></li>
-        <li><a href="jifen_duihuan02.html"><img src="images/duihuan.png"></a></li>
+    	<li><a href="/index.php/home/index/jifen_duihuan02"><img src="<{$templets}>/index/images/duihuan.png"></a></li>
+        <li><a href="/index.php/home/index/jifen_duihuan02"><img src="<{$templets}>/index/images/duihuan.png"></a></li>
+        <li><a href="/index.php/home/index/jifen_duihuan02"><img src="<{$templets}>/index/images/duihuan.png"></a></li>
     </ul>
 
 
