--- a/view/templets/home/index/jingdian_liulan.html
+++ b/view/templets/home/index/jingdian_liulan.html
@@ -1,15 +1,5 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/julebu.css" rel="stylesheet" type="text/css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery.SuperSlide.2.1.1.js"></script>
+<{include file="common_head1.html"}>
+<script src="<{$templets}>/index/js/jquery.SuperSlide.2.1.1.js"></script>
 <script>
 $(function(){
 	$(".top_nav").hover(function(){
@@ -27,70 +17,70 @@ body{overflow:hidden;}
 </head>
 
 <body>
-<div class="logo" style="top:80px;"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="logo" style="top:80px;"><a href="/index.php/home/index/index"><img src="<{$templets}>/index/images/logo.png"></a></div>
 <div class="bannerBox">
       <div class="kkk">
             <div class="imgBox">
-                 <div class="jule_tu" style="background-image:url(images/jd01.jpg);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/jd01.jpg);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/jidi01.png" height="140" width="683"></div>
-        				<div class="liulan"><a href="jingdian.html">查看PROTY繁星满天系列</a></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/jidi01.png" height="140" width="683"></div>
+        				<div class="liulan"><a href="/index.php/home/index/jingdian">查看PROTY繁星满天系列</a></div>
                     </div>
                  </div>
-                 <div class="jule_tu" style="background-image:url(images/jd02.jpg);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/jd02.jpg);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/jidi02.png" height="140" width="533"></div>
-        				<div class="liulan"><a href="jingdian.html">查看PROTY船锚系列</a></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/jidi02.png" height="140" width="533"></div>
+        				<div class="liulan"><a href="/index.php/home/index/jingdian">查看PROTY船锚系列</a></div>
                     </div>
                  </div>
-                 <div class="jule_tu" style="background-image:url(images/jd03.jpg);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/jd03.jpg);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/jidi03.png" height="140" width="607"></div>
-        				<div class="liulan"><a href="jingdian.html">查看PROTY太阳轮系列</a></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/jidi03.png" height="140" width="607"></div>
+        				<div class="liulan"><a href="/index.php/home/index/jingdian">查看PROTY太阳轮系列</a></div>
                     </div>
                  </div>
-                 <div class="jule_tu" style="background-image:url(images/jd04.jpg);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/jd04.jpg);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/jidi04.png" height="140" width="683"></div>
-        				<div class="liulan"><a href="jingdian.html">查看PROTY黑色爵士系列</a></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/jidi04.png" height="140" width="683"></div>
+        				<div class="liulan"><a href="/index.php/home/index/jingdian">查看PROTY黑色爵士系列</a></div>
                     </div>
                  </div>
-                 <div class="jule_tu" style="background-image:url(images/jd05.jpg);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/jd05.jpg);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/jidi05.png" height="140" width="683"></div>
-        				<div class="liulan"><a href="jingdian.html">查看PROTY海上明月系列</a></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/jidi05.png" height="140" width="683"></div>
+        				<div class="liulan"><a href="/index.php/home/index/jingdian">查看PROTY海上明月系列</a></div>
                     </div>
                  </div>
-                 <div class="jule_tu" style="background-image:url(images/jd06.jpg);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/jd06.jpg);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/jidi06.png" height="140" width="683"></div>
-        				<div class="liulan"><a href="jingdian.html">查看PROTY天使之吻系列</a></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/jidi06.png" height="140" width="683"></div>
+        				<div class="liulan"><a href="/index.php/home/index/jingdian">查看PROTY天使之吻系列</a></div>
                     </div>
                  </div>
-                 <div class="jule_tu" style="background-image:url(images/jd07.jpg);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/jd07.jpg);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/jidi07.png" height="140" width="683"></div>
-        				<div class="liulan"><a href="jingdian.html">查看PROTY自由的心系列</a></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/jidi07.png" height="140" width="683"></div>
+        				<div class="liulan"><a href="/index.php/home/index/jingdian">查看PROTY自由的心系列</a></div>
                     </div>
                  </div>
-                 <div class="jule_tu" style="background-image:url(images/jd08.jpg);">
+                 <div class="jule_tu" style="background-image:url(<{$templets}>/index/images/jd08.jpg);">
                  	<div class="jule_tu_content">
-                    	<div class="julebu"><img src="images/jidi08.png" height="140" width="683"></div>
-        				<div class="liulan"><a href="jingdian.html">查看PROTY魔法石系列</a></div>
+                    	<div class="julebu"><img src="<{$templets}>/index/images/jidi08.png" height="140" width="683"></div>
+        				<div class="liulan"><a href="/index.php/home/index/jingdian">查看PROTY魔法石系列</a></div>
                     </div>
                  </div>
                  
             </div>
             <div class="top_nav">
                 <ul class="nav01">
-                    <li><a href="daoru01.html">俱乐部</a></li>
-                    <li><a href="daoru02.html">星座珠宝</a></li>
-                    <li><a href="daoru03.html">珠宝世界</a></li>
-                    <li><a href="daoru04.html">高级定制系列</a></li>
-                    <li><a href="daoru05.html" class="curr_a1">经典珠宝</a></li>
-                    <li><a href="daoru06.html">PROTY之星</a></li>
-                    <li><a href="daoru07.html">品牌故事</a></li>
-                    <li><a href="daoru08.html">网络精品店</a></li>
+                    <li><a href="/index.php/home/index/daoru01">俱乐部</a></li>
+                    <li><a href="/index.php/home/index/daoru02">星座珠宝</a></li>
+                    <li><a href="/index.php/home/index/daoru03">珠宝世界</a></li>
+                    <li><a href="/index.php/home/index/daoru04">高级定制系列</a></li>
+                    <li><a href="/index.php/home/index/daoru05" class="curr_a1">经典珠宝</a></li>
+                    <li><a href="/index.php/home/index/daoru06">PROTY之星</a></li>
+                    <li><a href="/index.php/home/index/daoru07">品牌故事</a></li>
+                    <li><a href="/index.php/home/index/daoru08">网络精品店</a></li>
                 </ul>
                 <ul class="ding01">
                     <li>PROTY繁星满天系列</li>
