--- a/view/templets/home/index/zhubao_xq.html
+++ b/view/templets/home/index/zhubao_xq.html
@@ -1,19 +1,10 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="description" content="Free Web tutorials">
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>普罗蒂</title>
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/julebu.css" rel="stylesheet" type="text/css">
-<link href="css/zhubao.css" rel="stylesheet" type="text/css">
-<link href="css/Css.css" rel="stylesheet" type="text/css">
-<script src="js/jquery.js"></script>
-<script src="js/zhubao.js"></script>
-<script src="js/jquery.kkPages.js"></script>
-<script src="js/xingzuo.js"></script>
+<{include file="common_head1.html"}>
+
+<link href="<{$templets}>/index/css/zhubao.css" rel="stylesheet" type="text/css">
+<link href="<{$templets}>/index/css/Css.css" rel="stylesheet" type="text/css">
+<script src="<{$templets}>/index/js/zhubao.js"></script>
+<script src="<{$templets}>/index/js/jquery.kkPages.js"></script>
+<script src="<{$templets}>/index/js/xingzuo.js"></script>
 <script>
 $(function(){
 		$('.pro').kkPages({
@@ -24,44 +15,44 @@ $(function(){
 </script>  
 </head>
 
-<body style="background-image:url(images/zhubao_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
+<body style="background-image:url(<{$templets}>/index/images/zhubao_back.png);background-repeat:no-repeat;background-position:top center;background-size:cover;">
 <div class="top_nav" style="position:fixed;left:0;top:0;">
     <ul class="nav01">
-            <li><a href="daoru01.html">俱乐部</a></li>
-            <li><a href="daoru02.html" class="curr_a1">星座珠宝</a></li>
-            <li><a href="daoru03.html">珠宝世界</a></li>
-            <li><a href="daoru04.html">高级定制系列</a></li>
-            <li><a href="daoru05.html">经典珠宝</a></li>
-            <li><a href="daoru06.html">PROTY之星</a></li>
-            <li><a href="daoru07.html">品牌故事</a></li>
-            <li><a href="daoru08.html">网络精品店</a></li>
+            <li><a href="/index.php/home/index/daoru01">俱乐部</a></li>
+            <li><a href="/index.php/home/index/daoru02" class="curr_a1">星座珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru03">珠宝世界</a></li>
+            <li><a href="/index.php/home/index/daoru04">高级定制系列</a></li>
+            <li><a href="/index.php/home/index/daoru05">经典珠宝</a></li>
+            <li><a href="/index.php/home/index/daoru06">PROTY之星</a></li>
+            <li><a href="/index.php/home/index/daoru07">品牌故事</a></li>
+            <li><a href="/index.php/home/index/daoru08">网络精品店</a></li>
     </ul>
 </div>
-<div class="logo" style="position:static;margin-top:80px;"><a href=""><img src="images/logo.png"></a></div>
-<div class="zhi"><img src="images/zhi.png"></div>
+<div class="logo" style="position:static;margin-top:80px;"><a href=""><img src="<{$templets}>/index/images/logo.png"></a></div>
+<div class="zhi"><img src="<{$templets}>/index/images/zhi.png"></div>
 <div class="zhubao_content">
    <div class="zhanshi_left">
    		<ul class="tuji">
-        	<li style="display:block;"><img src="images/zhanshi01.png"></li>
-            <li><img src="images/de01.png"></li>
-            <li><img src="images/de07.png"></li>
-            <li><img src="images/de03.png"></li>
+        	<li style="display:block;"><img src="<{$templets}>/index/images/zhanshi01.png"></li>
+            <li><img src="<{$templets}>/index/images/de01.png"></li>
+            <li><img src="<{$templets}>/index/images/de07.png"></li>
+            <li><img src="<{$templets}>/index/images/de03.png"></li>
         </ul>
-        <div class="kuang"><img src="images/xuxian.png"></div>
+        <div class="kuang"><img src="<{$templets}>/index/images/xuxian.png"></div>
         <ul class="shijing">
-        	<li class="cu_li"><img src="images/zhanshi01.png"></li>
-            <li><img src="images/zhanshi01.png"></li>
-            <li><img src="images/zhanshi01.png"></li>
-            <li><img src="images/zhanshi01.png"></li>
+        	<li class="cu_li"><img src="<{$templets}>/index/images/zhanshi01.png"></li>
+            <li><img src="<{$templets}>/index/images/zhanshi01.png"></li>
+            <li><img src="<{$templets}>/index/images/zhanshi01.png"></li>
+            <li><img src="<{$templets}>/index/images/zhanshi01.png"></li>
         </ul>
    
    
    
    </div>  
    <div class="zhanshi_right">
-   		<div class="diwang"><img src="images/diwang.png" width="300" height="55"></div>
+   		<div class="diwang"><img src="<{$templets}>/index/images/diwang.png" width="300" height="55"></div>
         <div class="bianhao">编号：戒指DWI0945</div>
-        <div class="qishou"><img src="images/shou.png" width="222" height="36"></div>
+        <div class="qishou"><img src="<{$templets}>/index/images/shou.png" width="222" height="36"></div>
         <div class="biaoshu">一款表达自由精神的珠宝，缔造手镯传奇。令人心驰神往的珠宝系列，以珍稀宝石雕琢开启幸运的护身符。珍贵而精致的护身符轻抚肌肤，如梦如幻，轻盈剔透。对比鲜明的材质与圆润光滑的曲线相映成趣，简约而不失优雅。天然彩色宝石熠熠生辉，令中央的钻石更耀眼夺目。可以闭合开启的挂锁设计，珍藏愿望，释放梦传奇。令人心驰神往的珠宝系列，以珍稀宝石雕琢开启幸运的护身符。珍贵而精致的护身符轻抚肌肤，而不失优雅。天然以闭合开启的挂锁设计，珍藏.... </div>
         <div class="leixing">
         首饰类型: 戒指    材质: 玫瑰金 <br>
@@ -71,48 +62,48 @@ $(function(){
         尺寸对照表: 下载尺码表
         </div>
         <div class="tianjia">
-        	<a href=""><img src="images/yuanwang.png" width="176" height="24"></a>
-        	<a href=""><img src="images/qingdan.png" width="149" height="24"></a>
+        	<a href=""><img src="<{$templets}>/index/images/yuanwang.png" width="176" height="24"></a>
+        	<a href=""><img src="<{$templets}>/index/images/qingdan.png" width="149" height="24"></a>
         </div>
    </div>  
 </div>
 <div class="cedaohang">
         <ul class="ce_nav">
-            <li class="xai"><img src="images/tong.png" width="82" height="20"></li>
-            <li><img src="images/tong01.png" width="82" height="20"></li>
+            <li class="xai"><img src="<{$templets}>/index/images/tong.png" width="82" height="20"></li>
+            <li><img src="<{$templets}>/index/images/tong01.png" width="82" height="20"></li>
         </ul>
 </div>
 <div class="xq01" style="display:block;">
         	<ul class="jian_box">
             	<li>
-                	<a href="zhubao_xq.html"><img src="images/jian01.png"></a>
-                    <div class="tuxu"><img src="images/jian01_back.png"></div>
-                    <div class="zuanshi_name"><a href="zhubao_xq.html">18K金镶黄钻手链</a></div>
+                	<a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/jian01.png"></a>
+                    <div class="tuxu"><img src="<{$templets}>/index/images/jian01_back.png"></div>
+                    <div class="zuanshi_name"><a href="/index.php/home/index/zhubao_xq">18K金镶黄钻手链</a></div>
                 </li>
                 <li>
-                	<a href="zhubao_xq.html"><img src="images/jian01.png"></a>
-                    <div class="tuxu"><img src="images/jian01_back.png"></div>
-                    <div class="zuanshi_name"><a href="zhubao_xq.html">18K金镶黄钻手链</a></div>
+                	<a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/jian01.png"></a>
+                    <div class="tuxu"><img src="<{$templets}>/index/images/jian01_back.png"></div>
+                    <div class="zuanshi_name"><a href="/index.php/home/index/zhubao_xq">18K金镶黄钻手链</a></div>
                 </li>
                 <li>
-                	<a href="zhubao_xq.html"><img src="images/jian01.png"></a>
-                    <div class="tuxu"><img src="images/jian01_back.png"></div>
-                    <div class="zuanshi_name"><a href="zhubao_xq.html">18K金镶黄钻手链</a></div>
+                	<a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/jian01.png"></a>
+                    <div class="tuxu"><img src="<{$templets}>/index/images/jian01_back.png"></div>
+                    <div class="zuanshi_name"><a href="/index.php/home/index/zhubao_xq">18K金镶黄钻手链</a></div>
                 </li>
                 <li>
-                	<a href="zhubao_xq.html"><img src="images/jian01.png"></a>
-                    <div class="tuxu"><img src="images/jian01_back.png"></div>
-                    <div class="zuanshi_name"><a href="zhubao_xq.html">18K金镶黄钻手链</a></div>
+                	<a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/jian01.png"></a>
+                    <div class="tuxu"><img src="<{$templets}>/index/images/jian01_back.png"></div>
+                    <div class="zuanshi_name"><a href="/index.php/home/index/zhubao_xq">18K金镶黄钻手链</a></div>
                 </li>
             </ul>
 </div>
 
 <div class="xq01">
 	<ul class="sui">
-    	<li><a href="zhubao_xq.html"><img src="images/chanpin03.png"></a></li>
-        <li><a href="zhubao_xq.html"><img src="images/chanpin04.png"></a></li>
-        <li><a href="zhubao_xq.html"><img src="images/chanpin02.png"></a></li>
-        <li><a href="zhubao_xq.html"><img src="images/chanpin05.png"></a></li>
+    	<li><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/chanpin03.png"></a></li>
+        <li><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/chanpin04.png"></a></li>
+        <li><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/chanpin02.png"></a></li>
+        <li><a href="/index.php/home/index/zhubao_xq"><img src="<{$templets}>/index/images/chanpin05.png"></a></li>
     </ul>
 </div>
 
